# witness-skill

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  live-providers.yml
benchmarks/: cases.json
docs/: ADAPTERS.md  ARCHITECTURE.md  CODEX_INTEGRATION.md  ELECTRON.md  ENGINE_BRIDGES.md  GAME_VISUAL_QA.md  GITHUB_PR_COMMENTS.md  HOST_MODEL_PROTOCOL.md  MOBILE.md  OBSERVATION_ENGINE.md  PERSONA_SYSTEM.md  PROJECT_DETECTION.md  REMEDIATION.md  REPORTING.md  SKILL_INTERFACE.md
docs/assets/: demo-transcript.txt
docs/schemas/: witness-game.schema.json
examples/buggy_signup/: README.md  app.py  index.html
examples/friendly_cli/: README.md  cli.py
examples/game_visual_review/: generate_frames.py  (+3 more)
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: install-codex.ps1  install-codex.sh  install_codex.py  witness-codex
tests/: conftest.py  test_api_adapter.py  test_benchmark.py  test_campaign.py  test_cli_adapter.py  test_cli_commands.py  test_cli_surface.py  test_codex_provider.py  test_command_provider.py  test_config.py  test_demo_asset.py  test_detection.py  test_distribution.py  test_electron_adapter.py  test_engine_bridges.py  test_engine_distribution.py  test_game_adapter.py  test_github_integration.py  test_host_daemon.py  test_host_session.py  test_host_session_unit.py  test_mobile_adapter.py  test_observation.py  test_orchestrator.py  test_personas.py  test_planning.py  test_prompt_builder.py  test_providers.py  test_remediation.py  test_replay.py  test_reporting.py  test_safety.py  test_utils.py  test_web_adapter.py  test_web_adapter_unit.py
validation/: CODEX_INTEGRATION_VERIFICATION.md  FINAL_VERIFICATION.txt  HARDENING_VERIFICATION_1.2.0.md  README.md
(+130 files in other folders)
